force-app/main/default/objects/MC4SF__MC_Static_Segment__c/MC4SF__MC_Static_Segment__c.object-meta.xml
<CustomObject>
    <label>MC Static Segment</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>MC Static Segments Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MC Static Segments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>