force-app/main/default/objects/MC4SF__MC_Static_Segment__c/fields/MC4SF__Last_Reset__c.field-meta.xml
<CustomField>
    <fullName>MC4SF__Last_Reset__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Reset</label>
    <length>255</length>
    <type>Text</type>
</CustomField>